--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -84,7 +84,7 @@
         <div class=" font-weight-bold mb-5">+91-9826527244
           <a href="mailto:gourav.hammad.sdbc@gmail.com"> gourav.hammad.sdbc@gmail.com</a>
         </div>
-        <p class="lead mb-5 text-justify">I am a Full Stack developer 🚀 from India, Currently working as a Associate Software Developer at Bajaj Finserv Health. I am a part of the DRx team and I work on the Bajaj Health care product i.e. DRx platform which contributes to providing Healthcare solutions. Tech Stack which I currently work upon is ReactJS and JavaScript.</p>
+        <p class="lead mb-5 text-justify">I am a Full Stack developer 🚀 from India, Currently working as a Software Engineer at Cars24. I am a part of the Cars24 Australia team and I work on the next-generation eCommerce platform for pre-owned cars. Tech Stack which I currently work upon is ReactJS, HTML/CSS, TypeScript, NextJS and JavaScript.</p>
         <div class="social-icons">
           <a target="__blank" href="https://www.linkedin.com/in/gouravhammad/">
             <i class="fab fa-linkedin-in"></i>
@@ -122,7 +122,7 @@
             <h3 class="mb-0">Sushila Devi Bansal College of Technology, Indore</h3>
             <div class="subheading mb-3">Bachelor of Technology (B.Tech)</div>
             <div>Computer Science Engineering</div>
-            <p>CGPA: 8.2</p>
+            <p>CGPA: 8.3</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2017 - Jul 2021</span>
@@ -162,19 +162,39 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Cars24, Bangalore</div>
+            <p class="text-justify">
+              <ul>
+                  <li>Working on the Cars24 Australia product i.e. the next-generation e-commerce platform for pre-owned cars. </li>
+                  <li>Participate in Daily scrums, feature enhancement, product improvement, delivering user stories and bug fixes.</li>
+              </ul>
+            </p>  
+            <p class="text-justify">Tech Stack: ReactJS, NextJS, TypeScript, JavaScript, HTML and CSS</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2022 - Present</span>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
             <h3 class="mb-0">Associate Software Engineer</h3>
             <div class="subheading mb-3">Bajaj Finserv Health, Pune</div>
             <p class="text-justify">
               <ul>
-                  <li>Working on the Bajaj Product i.e. the <a target="__blank" href="https://doctors.bajajfinservhealth.in/">DRx Platform</a>, the ultimate platform for hassle-free practice management.</li>
-                  <li>Implemented the  <a target="__blank" href="https://voice.bajajfinservhealth.in/">Voice Prescription Platform</a> which helps in prescribing medicine using Voice Recognition.</li>
+                  <li>Worked on the Bajaj Product i.e. the <a target="__blank" href="https://doctors.bajajfinservhealth.in/">DRx Platform</a>, the ultimate platform for hassle-free practice management.</li>
+                  <li>Implemented the <a target="__blank" href="https://voice.bajajfinservhealth.in/">Voice Prescription Platform</a>, Balic-MER project, GSK vaccination project, Payments feature, etc.
+                  </li>
                   <li>Participate in Daily scrums, feature enhancement, product improvement, delivering user stories and bug fixes.</li>
+                  <li>Received the Hero of the month award for cache management, integrating GA events and API performance improvement.</li>
               </ul>
             </p>  
             <p class="text-justify">Tech Stack: ReactJS, JavaScript, HTML and CSS</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jun 2021 - Present</span>
+            <span class="text-primary">Jun 2021 - May 2022</span>
           </div>
         </div>
 
@@ -205,9 +225,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">Software Development Engineer</h3>
+            <h3 class="mb-0">SDE Intern</h3>
             <div class="subheading mb-3">Bajaj Finserv Health, Pune</div>
-            <p class="text-justify">I had worked as an SDE intern at Bajaj Finserv Health where I was actively involved in the full software development life cycle. I was a part of the DRx team and contribute to providing Healthcare solutions. Worked on ReactJS Technology.</p>
+            <p class="text-justify">Worked as an SDE intern at Bajaj Finserv Health where I was actively involved in the full software development life cycle. I was a part of the DRx team and contribute to providing Healthcare solutions. Tech Stack which I used was ReactJS, HTML/CSS, NextJS, and JavaScript.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2020 - Jun 2021</span>
@@ -218,7 +238,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">InterviewBit</div>
-            <p class="text-justify">As a Part-time Technical Content Writer at InterviewBit, I was responsible for writing new articles and improving any existing articles if needed. I had published 10+ articles (each having 3000-4000 words) covering various domains like Software Engineering, Operating systems, Interview questions, etc.</p>
+            <p class="text-justify">Worked as Part-time Technical Content Writer at InterviewBit. I was responsible for writing new articles and improving any existing articles if needed. I had published 10+ articles (each having 3000-4000 words) covering various domains like Software Engineering, Operating systems, Interview questions, etc.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2021 - Jun 2021</span>
@@ -229,7 +249,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">As a Technical Content Reviewer, I was tasked to review the Technical Content Articles written on GeeksforGeeks to ensure that the new content published on the platforms is reviewed and reformed. I had reviewed 1250+ articles with codes.</p>
+            <p class="text-justify">Worked as Technical Content Reviewer at GeeksforGeeks. I was tasked to review the Technical Content Articles written on GeeksforGeeks to ensure that the new content published on the platforms is reviewed and reformed. I had reviewed 1250+ articles with codes.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2020 - Jun 2021</span>
@@ -240,7 +260,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">As a Technical Content Writer at GeeksforGeeks, I was responsible for writing new articles and improving any existing articles if needed. I had published 750+ articles covering various domains like Software Engineering, ReactJS, NodeJS, ExpressJS, MongoDB, Email, and SMS API integration, etc.</p>
+            <p class="text-justify">Worked as Technical Content Writer at GeeksforGeeks. I was responsible for writing new articles and improving any existing articles if needed. I had published 750+ articles covering various domains like Software Engineering, ReactJS, NodeJS, ExpressJS, MongoDB, Email, and SMS API integration, etc.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Apr 2020 - Jun 2021</span>
@@ -251,7 +271,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Node.js Developer</h3>
             <div class="subheading mb-3">TDI, Indore</div>
-            <p class="text-justify">I had worked as a Node.js Developer intern at The Design Institute, Indore. There I worked on multiple projects and worked closely with the UX/UI team. I managed the Backend in Node.js of the Fauna Nation project and later on I worked on the Water Delivery project. Throughout the process, I was actively involved in the full software development life cycle.</p>
+            <p class="text-justify">Worked as a Node.js Developer intern at The Design Institute, Indore. There I worked on multiple projects and worked closely with the UX/UI team. I managed the Backend in Node.js of the Fauna Nation project and later on I worked on the Water Delivery project. Throughout the process, I was actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2019 - Feb 2020</span>
@@ -262,7 +282,7 @@
           <div class="resume-content">
             <h3 class="mb-0">MEAN Stack Developer</h3>
             <div class="subheading mb-3">Mantic Technologies, Indore</div>
-            <p class="text-justify">I had worked as a MEAN Stack developer. Initially, I created API's in Node.js and did some bug fixing. Later on, I worked on a client project and throughout the process, I was actively involved in the full software development life cycle.</p>
+            <p class="text-justify">Worked as a MEAN Stack developer. Initially, I created API's in Node.js and did some bug fixing. Later on, I worked on a client project and throughout the process, I was actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Jun 2019</span>
@@ -273,16 +293,14 @@
           <div class="resume-content">
             <h3 class="mb-0">Java Developer</h3>
             <div class="subheading mb-3">Mantic Technologies, Indore</div>
-            <p class="text-justify">I had worked as a Java Developer intern, my job roles were to create Web Services using the Jersey framework and implement Java solutions using Java frameworks like Spring and Hibernate. I was actively involved in the full software development life cycle.
+            <p class="text-justify">Worked as a Java Developer intern, my job roles were to create Web Services using the Jersey framework and implement Java solutions using Java frameworks like Spring and Hibernate. I was actively involved in the full software development life cycle.
             </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2018 - Jan 2019</span>
           </div>
         </div>
-
       </div>
-
     </section>
 
     <hr class="m-0">
@@ -470,9 +488,9 @@
         <h2 class="mb-5">Technical Skills</h2>
 
         <ul class="fa-ul mb-0">
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python, and JavaScript</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python, JavaScript, and TypeScript</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Backend : </span> Node.js, Express.js, Sails.js, Spring MVC, Hibernate, and Mongoose</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span>  React.js, Handlebars, EJS, HTML, CSS, Bootstrap, Basics of Angular.js and React Native</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span>  React.js, Next.js, Handlebars, EJS, HTML, CSS, Bootstrap, Basics of Angular.js and React Native</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Database : </span> SQL and MongoDB</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Postman, Compass, Robo3T, Slack, Jira, Azure DevOps, Maven, and Basics of Amazon EC2</li>
         </ul>
